@startuml

abstract class AbstractTask


AbstractTask <|-- Task
AbstractTask <|-- DefaultTask

Imputation "1" -- "*" AbstractTask
Task "1" -- "*" TaskRevision
Task "1" -- "1" State
Task -- "1" TaskType
Task "*" -- "1" Project
TaskRevision -- "1" User :assignee
Project "*" -- "*" User

class AbstractTask {
Long id
String name
String description
Date startDate
Date endDate
}


class Task {
String origin
String remotePath
String remoteId
Double OE
}

class TaskRevision {
Double RE
Date revisionDate
}

enum State {
  OPEN
  IN_PROGRESS
  CLOSED
}

class TaskType {
  String typeName
}

@enduml